<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/dialog_prompt_ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <ImageView
                android:id="@+id/dialog_main_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/device_search" />

            <ImageView
                android:id="@+id/dialog_main_img_anim"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/loading"
                android:visibility="gone" />

            <TextView
                android:id="@+id/dialog_main_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lines="1"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_prompt_ll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:layout_weight="0.0001"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/dialog_ok"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/dialog_confirm"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.0001"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/dialog_no"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/dialog_cancel"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/dialog_pointMessage"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <EditText
                android:id="@+id/dialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_edittext_bg"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:phoneNumber="true"
                android:textColor="@android:color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_confirm"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/dialog_confirm"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.0001"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/dialog_cancel"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>